# stellaML

./: README.md  pyproject.toml
docs/: framework_roadmap.md  openclaw_integration_review.md
examples/: csv_auto_eda_example.py  hf_agentic_harness_demo.py  iris_automl_demo.py  run_demo.py  sales.csv
scripts/: check_merge_conflicts.py
src/stella_ml/: __init__.py  analytics.py  automl.py  config.py  feasibility.py  harness.py  local_sota.py  ml_backends.py  models.py  orchestrator.py  runtime.py  unstructured.py  web_orchestration.py
src/stella_ml/providers/: __init__.py  base.py  huggingface.py  openai_compatible.py
src/stellaml/: __init__.py  agents.py  harness.py  lattice.py  orchestrator.py
tests/: test_analytics.py  test_automl.py  test_config_and_runtime.py  test_feasibility.py  test_harness.py  test_huggingface_provider.py  test_local_sota.py  test_ml_backends.py  test_orchestrator.py  test_unstructured.py  test_web_orchestration.py
