[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stella-ml"
version = "0.1.0"
description = "Basic model-inference and agentic orchestration framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "stellaML contributors"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
